Fixed gem insertion not working